fix: [css] pagination overflow

--- a/app/assets/src/css/core.css
+++ b/app/assets/src/css/core.css
@@ -13,8 +13,7 @@ main {
 }
 
 .nav-pagination {
-  position: relative;
-  left: calc(40% - var(--sidebar));
+  margin-left: calc(40% - var(--sidebar));
 }
 
 [v-cloak] {
